[package]
name = "ruroutes-graphql"
version = "0.0.1"
authors = ["Adam Piziak <adam.piziak@rutgers.edu>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
reqwest = "0.9.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
juniper = "0.10.0"
juniper_rocket = "0.1.3"
phf = "0.7.23"
phf_macros = "0.7.23"