[package]
name = "scarletbus"
version = "0.0.1"
authors = ["Adam Piziak <adam.piziak@rutgers.edu>"]

[dependencies]
rocket = "0.4.0"
reqwest = "0.9.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
juniper = "0.11.1"
juniper_rocket = "0.2.0"
phf = { version = "0.7.24", features = ["macros"] }
chrono = "0.4.6"
rocket_cors = "0.4.0"
polyline = "0.5.0"
